--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "sharp": "^0.33.2"
+    "sharp": "^0.33.2",
+    "sweetalert2": "^11.10.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
